<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/background_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/basic_tips"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />


    </RelativeLayout>


    <GridLayout
        android:id="@+id/buttonGridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:rowCount="3"
        android:columnCount="3"
        android:orientation="horizontal"
        android:padding="16dp"
        android:useDefaultMargins="true"
        android:alignmentMode="alignMargins"
        android:layout_weight="1">


        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/tip_tire"
            android:background="@drawable/button_bg" />


        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/engine_sound"
            android:background="@drawable/button_bg" />


        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/transmision_problem"
            android:background="@drawable/button_bg" />


        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/gas_out"
            android:background="@drawable/button_bg" />

        <!-- Add three more buttons here -->
        <!-- Button 5 -->
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/lights"
            android:background="@drawable/button_bg" />

        <!-- Button 6 -->
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/lost_key"
            android:background="@drawable/button_bg" />

        <!-- Button 7 -->
        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/overheating"
            android:background="@drawable/button_bg" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/hand_brake"
            android:background="@drawable/button_bg" />


        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:text="@string/car_accident"
            android:background="@drawable/button_bg" />

    </GridLayout>


    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">


    </LinearLayout>

</LinearLayout>
