<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingTop="20sp"
            android:shadowColor="#0E0E0E"
            android:typeface="sans"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/GoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:drawableLeft="@drawable/google"
            android:elevation="8dp"
            android:text="@string/google_sign_in"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:layout_marginTop="160dp">



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/my_name"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>
